--- a/404.md
+++ b/404.md
@@ -1,6 +1,9 @@
 ---
-title: 404
 layout: layouts/page.njk
+section: error
+pageType: error-page
+metaDescription: Uh oh, the resource you requested isn't here. Sorry for the inconvenience. Please navigate back or contact us for assistance.
+title: 404 - Page Not Found
+date: 2024-11-14
 permalink: /404.html
 ---
-Uh oh, the resource you requested isn't here. Sorry.
